# desi_ludo

./: PROJECT_DESCRIPTION.md  frontend_and_backend.md  project_division.md
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vercel.json
client/src/: App.css  App.tsx  index.css
client/src/api/: gameApi.ts
client/src/components/game/: GameBoard.tsx  GameContainer.tsx  KawadiArea.tsx
client/src/components/ui/: PlayerIndicator.tsx
client/src/pages/: GamePage.tsx  StartMenu.tsx
client/src/phaser/: game.ts
client/src/phaser/config/: gameConfig.ts
client/src/phaser/managers/: PieceManager.ts  PlayerManager.ts
client/src/phaser/scenes/: BootScene.ts  GameScene.ts
client/src/store/: gameStore.ts
client/src/types/: gameTypes.ts
client/src/utils/: boardLayout.ts  boardPath.ts
server/: .gitignore  BACKEND_RUN_UCRT64.md  BACKEND_SCHEMA.md
server/MyCrowApp/: CMakeLists copy.txt  CMakeLists.txt  Dockerfile  main.cpp
server/MyCrowApp/backend/api/: SessionRegistry.cpp  SessionRegistry.h
server/MyCrowApp/backend/dto/: GameSnapshot.cpp  GameSnapshot.h
server/MyCrowApp/backend/entities/: Board.cpp  Board.h  Cell.cpp  Cell.h  ChallasAathBoard.cpp  ChallasAathBoard.h  Enums.h  GamePiece.cpp  GamePiece.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Token.cpp  Token.h
server/MyCrowApp/backend/logic/: CowrieRoll.cpp  CowrieRoll.h  MoveValidator.cpp  MoveValidator.h  RollStrategy.h
server/MyCrowApp/backend/orchestration/: GameSession.cpp  GameSession.h
server/MyCrowApp/backend/state/: GameState.cpp  GameState.h
